Update FlightPath.java
added functions to send details to the google map API (still need to figure out how to have the API working) / added function to put the string into a csv format separated by commas